src/main/java/edu/boisestate/cs/antlrTools/SMTLIBv2StringsParser.java
package edu.boisestate.cs.antlrTools;
// Generated from SMTLIBv2Strings.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SMTLIBv2StringsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Comment=1, ParOpen=2, ParClose=3, CMD_checksat=4, CMD_declarefun=5, CMD_declareconst=6, 
		CMD_setinfo=7, CMD_setlogic=8, CMD_getmodel=9, CMD_getvalue=10, CMD_exit=11, 
		Assert=12, Let=13, And=14, Not=15, Equals=16, Or=17, LT=18, StrInRE=19, 
		LTE=20, Prefix=21, Suffix=22, Contains=23, StringConcat=24, StringReplace=25, 
		StringReplaceAll=26, StringReplaceRE=27, StringReplaceREAll=28, StringAt=29, 
		StringSubStr=30, StringLength=31, StringIndexOf=32, REfromString=33, REConcat=34, 
		REUnion=35, REInter=36, REKleeneClose=37, REComp=38, REDiff=39, REKleenCross=40, 
		REOpt=41, RERange=42, REIndex=43, RELoop=44, REConst=45, String=46, Int=47, 
		SymbolicType=48, VAR=49, Info=50, InfoKW=51, WS=52;
	public static final int
		RULE_script = 0, RULE_cmd_checkSat = 1, RULE_cmd_getModel = 2, RULE_cmd_getValue = 3, 
		RULE_cmd_declareFun = 4, RULE_cmd_declareConst = 5, RULE_cmd_exit = 6, 
		RULE_cmd_setInfo = 7, RULE_cmd_setLogic = 8, RULE_command = 9, RULE_info = 10, 
		RULE_stringTheory = 11, RULE_expr = 12, RULE_funString = 13, RULE_funInt = 14, 
		RULE_funRegLan = 15, RULE_fun = 16, RULE_string = 17, RULE_int = 18, RULE_reglan = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"script", "cmd_checkSat", "cmd_getModel", "cmd_getValue", "cmd_declareFun", 
			"cmd_declareConst", "cmd_exit", "cmd_setInfo", "cmd_setLogic", "command", 
			"info", "stringTheory", "expr", "funString", "funInt", "funRegLan", "fun", 
			"string", "int", "reglan"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'('", "')'", "'check-sat'", "'declare-fun'", "'declare-const'", 
			"'set-info'", "'set-logic'", "'get-model'", "'get-value'", "'exit'", 
			"'assert'", "'let'", "'and'", "'not'", "'='", "'or'", "'str.<'", "'str.in_re'", 
			"'str.<='", "'str.prefixof'", "'str.suffixof'", "'str.contains'", "'str.++'", 
			"'str.replace'", "'str.replace_all'", "'str.replace_re'", "'str.replace_re_all'", 
			"'str.at'", "'str.substr'", "'str.len'", "'str.indexof'", "'str.to_re'", 
			"'re.++'", "'re.union'", "'re.inter'", "'re.*'", "'re.comp'", "'re.diff'", 
			"'re.+'", "'re.opt'", "'re.range'", "'_ re.^'", "'_ re.loop'", null, 
			null, null, "'String'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Comment", "ParOpen", "ParClose", "CMD_checksat", "CMD_declarefun", 
			"CMD_declareconst", "CMD_setinfo", "CMD_setlogic", "CMD_getmodel", "CMD_getvalue", 
			"CMD_exit", "Assert", "Let", "And", "Not", "Equals", "Or", "LT", "StrInRE", 
			"LTE", "Prefix", "Suffix", "Contains", "StringConcat", "StringReplace", 
			"StringReplaceAll", "StringReplaceRE", "StringReplaceREAll", "StringAt", 
			"StringSubStr", "StringLength", "StringIndexOf", "REfromString", "REConcat", 
			"REUnion", "REInter", "REKleeneClose", "REComp", "REDiff", "REKleenCross", 
			"REOpt", "RERange", "REIndex", "RELoop", "REConst", "String", "Int", 
			"SymbolicType", "VAR", "Info", "InfoKW", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SMTLIBv2Strings.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SMTLIBv2StringsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScriptContext extends ParserRuleContext {
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public List<StringTheoryContext> stringTheory() {
			return getRuleContexts(StringTheoryContext.class);
		}
		public StringTheoryContext stringTheory(int i) {
			return getRuleContext(StringTheoryContext.class,i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMTLIBv2StringsListener ) ((SMTLIBv2StringsListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMTLIBv2StringsListener ) ((SMTLIBv2StringsListener)listener).exitScript(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(41); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(40);
					command();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(43); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(46); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(45);
					stringTheory();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(48); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ParOpen) {
				{
				{
				setState(50);
				command();
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Cmd_checkSatContext extends ParserRuleContext {
		public TerminalNode CMD_checksat() { return getToken(SMTLIBv2StringsParser.CMD_checksat, 0); }
		public Cmd_checkSatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd_checkSat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMTLIBv2StringsListener ) ((SMTLIBv2StringsListener)listener).enterCmd_checkSat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMTLIBv2StringsListener ) ((SMTLIBv2StringsListener)listener).exitCmd_checkSat(this);
		}
	}

	public final Cmd_checkSatContext cmd_checkSat() throws RecognitionException {
		Cmd_checkSatContext _localctx = new Cmd_checkSatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_cmd_checkSat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(CMD_checksat);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Cmd_getModelContext extends ParserRuleContext {
		public TerminalNode CMD_getmodel() { return getToken(SMTLIBv2StringsParser.CMD_getmodel, 0); }
		public Cmd_getModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd_getModel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMTLIBv2StringsListener ) ((SMTLIBv2StringsListener)listener).enterCmd_getModel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMTLIBv2StringsListener ) ((SMTLIBv2StringsListener)listener).exitCmd_getModel(this);
		}
	}

	public final Cmd_getModelContext cmd_getModel() throws RecognitionException {
		Cmd_getModelContext _localctx = new Cmd_getModelContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_cmd_getModel);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(CMD_getmodel);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Cmd_getValueContext extends ParserRuleContext {
		public TerminalNode CMD_getvalue() { return getToken(SMTLIBv2StringsParser.CMD_getvalue, 0); }
		public Cmd_getValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd_getValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMTLIBv2StringsListener ) ((SMTLIBv2StringsListener)listener).enterCmd_getValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMTLIBv2StringsListener ) ((SMTLIBv2StringsListener)listener).exitCmd_getValue(this);
		}
	}

	public final Cmd_getValueContext cmd_getValue() throws RecognitionException {
		Cmd_getValueContext _localctx = new Cmd_getValueContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cmd_getValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(CMD_getvalue);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Cmd_declareFunContext extends ParserRuleContext {
		public TerminalNode CMD_declarefun() { return getToken(SMTLIBv2StringsParser.CMD_declarefun, 0); }
		public TerminalNode VAR() { return getToken(SMTLIBv2StringsParser.VAR, 0); }
		public TerminalNode ParOpen() { return getToken(SMTLIBv2StringsParser.ParOpen, 0); }
		public TerminalNode ParClose() { return getToken(SMTLIBv2StringsParser.ParClose, 0); }
		public TerminalNode SymbolicType() { return getToken(SMTLIBv2StringsParser.SymbolicType, 0); }
		public Cmd_declareFunContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd_declareFun; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMTLIBv2StringsListener ) ((SMTLIBv2StringsListener)listener).enterCmd_declareFun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMTLIBv2StringsListener ) ((SMTLIBv2StringsListener)listener).exitCmd_declareFun(this);
		}
	}

	public final Cmd_declareFunContext cmd_declareFun() throws RecognitionException {
		Cmd_declareFunContext _localctx = new Cmd_declareFunContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cmd_declareFun);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(CMD_declarefun);
			setState(63);
			match(VAR);
			setState(64);
			match(ParOpen);
			setState(65);
			match(ParClose);
			setState(66);
			match(SymbolicType);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Cmd_declareConstContext extends ParserRuleContext {
		public TerminalNode CMD_declareconst() { return getToken(SMTLIBv2StringsParser.CMD_declareconst, 0); }
		public TerminalNode VAR() { return getToken(SMTLIBv2StringsParser.VAR, 0); }
		public TerminalNode SymbolicType() { return getToken(SMTLIBv2StringsParser.SymbolicType, 0); }
		public Cmd_declareConstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd_declareConst; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMTLIBv2StringsListener ) ((SMTLIBv2StringsListener)listener).enterCmd_declareConst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMTLIBv2StringsListener ) ((SMTLIBv2StringsListener)listener).exitCmd_declareConst(this);
		}
	}

	public final Cmd_declareConstContext cmd_declareConst() throws RecognitionException {
		Cmd_declareConstContext _localctx = new Cmd_declareConstContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cmd_declareConst);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(CMD_declareconst);
			setState(69);
			match(VAR);
			setState(70);
			match(SymbolicType);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Cmd_exitContext extends ParserRuleContext {
		public TerminalNode CMD_exit() { return getToken(SMTLIBv2StringsParser.CMD_exit, 0); }
		public Cmd_exitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd_exit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMTLIBv2StringsListener ) ((SMTLIBv2StringsListener)listener).enterCmd_exit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMTLIBv2StringsListener ) ((SMTLIBv2StringsListener)listener).exitCmd_exit(this);
		}
	}

	public final Cmd_exitContext cmd_exit() throws RecognitionException {
		Cmd_exitContext _localctx = new Cmd_exitContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_cmd_exit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(CMD_exit);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Cmd_setInfoContext extends ParserRuleContext {
		public TerminalNode CMD_setinfo() { return getToken(SMTLIBv2StringsParser.CMD_setinfo, 0); }
		public TerminalNode InfoKW() { return getToken(SMTLIBv2StringsParser.InfoKW, 0); }
		public List<InfoContext> info() {
			return getRuleContexts(InfoContext.class);
		}
		public InfoContext info(int i) {
			return getRuleContext(InfoContext.class,i);
		}
		public Cmd_setInfoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd_setInfo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMTLIBv2StringsListener ) ((SMTLIBv2StringsListener)listener).enterCmd_setInfo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMTLIBv2StringsListener ) ((SMTLIBv2StringsListener)listener).exitCmd_setInfo(this);
		}
	}

	public final Cmd_setInfoContext cmd_setInfo() throws RecognitionException {
		Cmd_setInfoContext _localctx = new Cmd_setInfoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_cmd_setInfo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(CMD_setinfo);
			setState(75);
			match(InfoKW);
			setState(77); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(76);
				info();
				}
				}
				setState(79); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 1759218604441600L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Cmd_setLogicContext extends ParserRuleContext {
		public TerminalNode CMD_setlogic() { return getToken(SMTLIBv2StringsParser.CMD_setlogic, 0); }
		public InfoContext info() {
			return getRuleContext(InfoContext.class,0);
		}
		public Cmd_setLogicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd_setLogic; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMTLIBv2StringsListener ) ((SMTLIBv2StringsListener)listener).enterCmd_setLogic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMTLIBv2StringsListener ) ((SMTLIBv2StringsListener)listener).exitCmd_setLogic(this);
		}
	}

	public final Cmd_setLogicContext cmd_setLogic() throws RecognitionException {
		Cmd_setLogicContext _localctx = new Cmd_setLogicContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_cmd_setLogic);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(CMD_setlogic);
			setState(82);
			info();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommandContext extends ParserRuleContext {
		public List<TerminalNode> ParOpen() { return getTokens(SMTLIBv2StringsParser.ParOpen); }
		public TerminalNode ParOpen(int i) {
			return getToken(SMTLIBv2StringsParser.ParOpen, i);
		}
		public Cmd_checkSatContext cmd_checkSat() {
			return getRuleContext(Cmd_checkSatContext.class,0);
		}
		public List<TerminalNode> ParClose() { return getTokens(SMTLIBv2StringsParser.ParClose); }
		public TerminalNode ParClose(int i) {
			return getToken(SMTLIBv2StringsParser.ParClose, i);
		}
		public Cmd_getModelContext cmd_getModel() {
			return getRuleContext(Cmd_getModelContext.class,0);
		}
		public Cmd_getValueContext cmd_getValue() {
			return getRuleContext(Cmd_getValueContext.class,0);
		}
		public List<TerminalNode> VAR() { return getTokens(SMTLIBv2StringsParser.VAR); }
		public TerminalNode VAR(int i) {
			return getToken(SMTLIBv2StringsParser.VAR, i);
		}
		public Cmd_declareFunContext cmd_declareFun() {
			return getRuleContext(Cmd_declareFunContext.class,0);
		}
		public Cmd_declareConstContext cmd_declareConst() {
			return getRuleContext(Cmd_declareConstContext.class,0);
		}
		public Cmd_exitContext cmd_exit() {
			return getRuleContext(Cmd_exitContext.class,0);
		}
		public Cmd_setInfoContext cmd_setInfo() {
			return getRuleContext(Cmd_setInfoContext.class,0);
		}
		public Cmd_setLogicContext cmd_setLogic() {
			return getRuleContext(Cmd_setLogicContext.class,0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMTLIBv2StringsListener ) ((SMTLIBv2StringsListener)listener).enterCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMTLIBv2StringsListener ) ((SMTLIBv2StringsListener)listener).exitCommand(this);
		}
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_command);
		int _la;
		try {
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				match(ParOpen);
				setState(85);
				cmd_checkSat();
				setState(86);
				match(ParClose);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				match(ParOpen);
				setState(89);
				cmd_getModel();
				setState(90);
				match(ParClose);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(92);
				match(ParOpen);
				setState(93);
				cmd_getValue();
				setState(94);
				match(ParOpen);
				setState(96); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(95);
					match(VAR);
					}
					}
					setState(98); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==VAR );
				setState(100);
				match(ParClose);
				setState(101);
				match(ParClose);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(103);
				match(ParOpen);
				setState(104);
				cmd_declareFun();
				setState(105);
				match(ParClose);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(107);
				match(ParOpen);
				setState(108);
				cmd_declareConst();
				setState(109);
				match(ParClose);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(111);
				match(ParOpen);
				setState(112);
				cmd_exit();
				setState(113);
				match(ParClose);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(115);
				match(ParOpen);
				setState(116);
				cmd_setInfo();
				setState(117);
				match(ParClose);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(119);
				match(ParOpen);
				setState(120);
				cmd_setLogic();
				setState(121);
				match(ParClose);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InfoContext extends ParserRuleContext {
		public TerminalNode Info() { return getToken(SMTLIBv2StringsParser.Info, 0); }
		public TerminalNode String() { return getToken(SMTLIBv2StringsParser.String, 0); }
		public TerminalNode VAR() { return getToken(SMTLIBv2StringsParser.VAR, 0); }
		public InfoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_info; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMTLIBv2StringsListener ) ((SMTLIBv2StringsListener)listener).enterInfo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMTLIBv2StringsListener ) ((SMTLIBv2StringsListener)listener).exitInfo(this);
		}
	}

	public final InfoContext info() throws RecognitionException {
		InfoContext _localctx = new InfoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_info);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1759218604441600L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StringTheoryContext extends ParserRuleContext {
		public TerminalNode ParOpen() { return getToken(SMTLIBv2StringsParser.ParOpen, 0); }
		public TerminalNode Assert() { return getToken(SMTLIBv2StringsParser.Assert, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode ParClose() { return getToken(SMTLIBv2StringsParser.ParClose, 0); }
		public StringTheoryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringTheory; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMTLIBv2StringsListener ) ((SMTLIBv2StringsListener)listener).enterStringTheory(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMTLIBv2StringsListener ) ((SMTLIBv2StringsListener)listener).exitStringTheory(this);
		}
	}
